--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ name = "patricia-trie"
 path = "src/trie/patricia.rs"
 
 [[bin]]
+name = "atomic-playground"
+path = "src/atomics/playground.rs"
+
+[[bin]]
 name = "main"
 path = "src/main.rs"
 
