--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,20 @@ name = "channel-playground"
 path = "src/channels/playground.rs"
 
 [[bin]]
+name = "runjs"
+path = "src/runjs/main.rs"
+
+[[bin]]
 name = "main"
 path = "src/main.rs"
 
 [dependencies]
+deno_ast = { version = "=0.48.0", features = ["transpiling"] }
+deno_core = "0.352.0"
+deno_error = "0.6.1"
+reqwest = "0.12.20"
+thiserror = "2.0.12"
+tokio = { version = "1.45.1", features = ["full"] }
+
+[build-dependencies]
+deno_core = "0.352.0"
