--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,26 @@ name = "learning-impl"
 version = "0.1.0"
 edition = "2024"
 
+[dependencies]
+deno_ast = { version = "=0.48.0", features = ["transpiling"] }
+deno_core = "0.352.0"
+deno_error = "0.6.1"
+reqwest = "0.12.20"
+thiserror = "2.0.12"
+tokio = { version = "1.45.1", features = ["full"] }
+
+[dev-dependencies]
+criterion = {version = "0.6.0", features = ["html_reports"]}
+
+[build-dependencies]
+deno_core = "0.352.0"
+
+
+[[bench]]
+name = "radix_benchmark"
+harness = false
+
+
 [[bin]]
 name = "naive-trie"
 path = "src/trie/naive.rs"
@@ -31,13 +51,3 @@ path = "src/runjs/main.rs"
 name = "main"
 path = "src/main.rs"
 
-[dependencies]
-deno_ast = { version = "=0.48.0", features = ["transpiling"] }
-deno_core = "0.352.0"
-deno_error = "0.6.1"
-reqwest = "0.12.20"
-thiserror = "2.0.12"
-tokio = { version = "1.45.1", features = ["full"] }
-
-[build-dependencies]
-deno_core = "0.352.0"
