--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,15 @@ edition = "2024"
 deno_ast = { version = "=0.48.0", features = ["transpiling"] }
 deno_core = "0.352.0"
 deno_error = "0.6.1"
-reqwest = "0.12.20"
-thiserror = "2.0.12"
-tokio = { version = "1.45.1", features = ["full"] }
+futures = "0.3.31"
+libp2p = "0.56.0"
+reqwest = "0.12.23"
+thiserror = "2.0.15"
+tokio = { version = "1.47.1", features = ["full"] }
+tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
 
 [dev-dependencies]
-criterion = {version = "0.6.0", features = ["html_reports"]}
+criterion = {version = "0.7.0", features = ["html_reports"]}
 
 [build-dependencies]
 deno_core = "0.352.0"
